Init web application

--- a/Yaml/wwwroot/yamler-login.html
+++ b/Yaml/wwwroot/yamler-login.html
@@ -2,7 +2,7 @@
 <html lang="utf-8">
 <head>
   <meta charset="utf-8"><meta http-equiv="x-ua-compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><link href="assets/css/components.css" rel="stylesheet">
-  
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
   <!-- Axios 是一个用于发起AJAX请求的简单、易于使用的库，它基于Promise，并提供了更现代的方式来处理HTTP请求 -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
  
