--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -638,7 +638,7 @@
                                                         </button>
                                                     </div>
                                                 </div>
-                                                <div class="m-data-table__container-item">
+                                                <div class="m-data-table__container-item" id="configMapField-table-body">
 
                                                 </div>
                                             </div>
