--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="assets/css/components.css" rel="stylesheet">
     <link href="assets/css/common.css" rel="stylesheet">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Promise for async operation -->
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
@@ -15,6 +17,9 @@
 
     <!--A practical functional library for JavaScript programmers.-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.29.1/ramda.min.js"></script>
+   
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
@@ -97,8 +102,8 @@
             </div>
 
             <section class="m-section m-section--no-padding">
-                <div class="m-page-heading">
-                    <h1 class="a-heading a-heading--h1 undefined"><span class="a-heading__label" data-i18n="appInfoPage.title">Yamler--CDコントロール</span></h1>
+                <div class="m-page-heading" id="appId" appId>
+                    <h1 class="a-heading a-heading--h1 undefined"><span class="a-heading__label"  data-i18n="appInfoPage.title">Yamler--CDコントロール</span></h1>
                 </div>
             </section>
             <section class="m-section m-section--no-padding p-list-content-holder">
@@ -317,7 +322,7 @@
                             <main class="o-modal__body" >
                                 <section class="m-section m-section--no-padding">
                                     <div class="m-page-heading">
-                                        <h1 class="a-heading a-heading--h1 undefined"><span class="a-heading__label" data-i18n="appInfoPage.clusterEdition">クラスター編集</span></h1>
+                                        <h1 id="clusterId" clusterId class="a-heading a-heading--h1 undefined"><span class="a-heading__label" data-i18n="appInfoPage.clusterEdition">クラスター編集</span></h1>
                                     </div>
                                 </section>
                                 <section class="m-section m-section--no-padding p-list-content-holder">
@@ -388,11 +393,9 @@
                                             <div class="m-form-field__content">
                                                 <div id="cpu" class="a-pulldown">
                                                     <select name="cpu" class="a-pulldown__select">
-                                                        <option>125m</option>
-                                                        <option value=""></option>
-                                                        <option value="1">250m</option>
-                                                        <option value="2">500m</option>
-                                                        <option value="3">1000m</option>
+                                                        <option value="256m">256m</option>
+                                                        <option value="500m">500m</option>
+                                                        <option value="1000m">1000m</option>
                                                     </select>
                                                     <div class="a-pulldown__icon-container">
                                                         <i class="a-icon a-icon--arrow-down"></i>
@@ -409,10 +412,9 @@
                                             <div class="m-form-field__content">
                                                 <div id="memory" class="a-pulldown">
                                                     <select name="memory" class="a-pulldown__select">
-                                                        <option>1024Mi</option>
-                                                        <option value=""></option>
-                                                        <option value="1">2048Mi</option>
-                                                        <option value="2">4096Mi</option>
+                                                        <option value="1024Mi">1024Mi</option>
+                                                        <option value="2048Mi">2048Mi</option>
+                                                        <option value="4096Mi">4096Mi</option>
                                                     </select>
                                                     <div class="a-pulldown__icon-container"><i class="a-icon a-icon--arrow-down"></i></div>
                                                 </div>
@@ -471,12 +473,12 @@
                                                         ：
                                                     </label>
                                                     <div class="m-form-field__content">
-                                                        <div id="cpu" class="a-pulldown">
+                                                        <div id="disk" class="a-pulldown">
                                                             <select name="diskSize" class="a-pulldown__select">
-                                                                <option>1G</option>
-                                                                <option value="1">10G</option>
-                                                                <option value="2">20G</option>
-                                                                <option value="3">50G</option>
+                                                                <option value="1G">1G</option>
+                                                                <option value="10G">10G</option>
+                                                                <option value="20G">20G</option>
+                                                                <option value="50G">50G</option>
                                                             </select>
                                                             <div class="a-pulldown__icon-container"><i class="a-icon a-icon--arrow-down"></i></div>
                                                         </div>
@@ -491,8 +493,6 @@
                                                     <div class="m-form-field__content">
                                                         <div id="diskType" class="a-pulldown">
                                                             <select name="diskType" class="a-pulldown__select">
-                                                                <option>1024Mi</option>
-                                                                <option value=""></option>
                                                                 <option value="1">Azure Premium Storage</option>
                                                                 <option value="2">Azure Standard Storage</option>
                                                             </select>
