--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -44,7 +44,7 @@
     <title>ルグイン</title>
 </head>
 <body>
-
+<div id="liveAlertPlaceholder"></div>
 <div class="o-whole o-whole--with-bg o-whole--with-navigation o-whole--global">
     <div class="o-whole__body-container">
         <div class="o-whole__navigation" data-simplebar="true">
@@ -300,11 +300,14 @@
                             <button class="a-button a-button--secondary a-button--huge" id="save-button">
                                 <div class="a-button__label" data-i18n="appInfoPage.save">保存</div>
                             </button>
-                            <button class="a-button a-button--third a-button--huge" id="download-button">
+                            <button class="a-button a-button--third a-button--huge" id="-button">
                                 <div class="a-button__label" data-i18n="appInfoPage.download">ダウンロード</div>
                             </button>
+                            <button class="a-button a-button--third a-button--huge" id="download-button">
+                                <div class="a-button__label" data-i18n="appInfoPage.export">エクスポート</div>
+                            </button>
                             <button class="a-button a-button--third a-button--huge" id="upload-button">
-                                <div class="a-button__label" data-i18n="appInfoPage.upload">アップロード</div>
+                                <div class="a-button__label" data-i18n="appInfoPage.upload">インポート</div>
                             </button>
                             <button class="a-button a-button--primary a-button--huge" id="deploy-button">
                                 <div class="a-button__label" data-i18n="appInfoPage.deploy">デプロイ</div>
