--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -528,12 +528,11 @@
                                                 </div>
                                             </div>
                                             <br />
-
                                         </div>
                                     </div>
                                     <div class="m-form-field__row m-form-field__row--column-size-12 m-form-field__row--column-size-pc-6" style="align-items:center">
                                         <label class="a-checkbox KeyChkbox">
-                                            <input type="checkbox" class="a-checkbox__input" id="KeyCheckbox" name="KeyCheckbox" value="2" />
+                                            <input type="checkbox" class="a-checkbox__input" id="KeyCheckbox" name="KeyCheckbox" />
                                             <div class="a-checkbox__body">
                                                 <span class="a-checkbox__indicator"><i class="a-icon a-icon--check-white"></i></span>
                                                 <div class="a-checkbox__label">
@@ -546,7 +545,7 @@
                                         </label>
                                     </div>
                                     <div class="m-form-field__row m-form-field__row--column-size-12 m-form-field__row--column-size-pc-6" style="align-items:center">
-                                        <div id="KeyVault_div" style="display:none">
+                                        <div id="KeyVault_div" name="KeyVault_div" style="display:none">
                                             <div class="m-data-table m-data-table--with-action-buttons undefined">
                                                 <div class="m-data-table__container">
                                                     <div class="m-data-table__header">
