--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -625,7 +625,7 @@
                                     <div id="ConfigFile_div" style="display:none">
                                         <div class="m-data-table m-data-table--with-action-buttons undefined">
 
-                                            <div class="m-data-table__container" id="configMapField-content">
+                                            <div class="m-data-table__container" >
                                                 <div class="m-data-table__header">
                                                     <div class="m-data-table__header-content m-data-table__header-content--type-data">
                                                         <label data-i18n="appInfoPage.filePath">ファイルパス</label>
@@ -640,7 +640,7 @@
                                                         </button>
                                                     </div>
                                                 </div>
-                                                <div class="m-data-table__container-item" id="configMapField-table-body">
+                                                <div class="m-data-table__container-item" id="configMapField-content">
 
                                                 </div>
                                             </div>
