Implement Validation Function

--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -476,7 +476,7 @@
                                                         ：
                                                     </label>
                                                     <div class="m-form-field__content">
-                                                        <div id="disk" class="a-pulldown">
+                                                        <div id="diskSize" class="a-pulldown">
                                                             <select name="diskSize" class="a-pulldown__select">
                                                                 <option value="1G">1G</option>
                                                                 <option value="10G">10G</option>
@@ -496,15 +496,15 @@
                                                     <div class="m-form-field__content">
                                                         <div id="diskType" class="a-pulldown">
                                                             <select name="diskType" class="a-pulldown__select">
-                                                                <option value="1">Azure Premium Storage</option>
-                                                                <option value="2">Azure Standard Storage</option>
+                                                                <option value="Azure Premium Storage">Azure Premium Storage</option>
+                                                                <option value="Azure Standard Storage">Azure Standard Storage</option>
                                                             </select>
                                                             <div class="a-pulldown__icon-container"><i class="a-icon a-icon--arrow-down"></i></div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="m-form-field__row m-form-field__row--column-size-12 m-form-field__row--column-size-pc-6" style="align-items:center">
+                                            <div class="m-form-field__row m-form-field__row--column-size-12 m-form-field__row--column-size-pc-12" style="align-items:center">
                                                 <div class="m-data-table m-data-table--with-action-buttons undefined">
                                                     <div class="m-data-table__container">
                                                         <div class="m-data-table__header">
