--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -115,7 +115,10 @@
                             <div class="m-form-field p-setting-input-form__form-field">
                                 <label class="m-form-field__label">
                                     <label data-i18n="appInfoPage.appName">システム・アプリ名</label> &nbsp
-                                    <div class="a-help-button" id="help-opener5"><i class="a-icon a-icon--help"></i></div>
+                                    <div class="a-help-button" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
+                                        <i class="a-icon a-icon--help">
+                                        </i>
+                                    </div>
                                     ：<span class="m-form-field__label-addons"><span class="a-tag" data-i18n="appInfoPage.required">必須</span></span>
                                 </label>
                                 <div class="m-form-field__content">
@@ -306,7 +309,9 @@
                             <button class="a-button a-button--third a-button--huge" id="download-button">
                                 <div class="a-button__label" data-i18n="appInfoPage.export">エクスポート</div>
                             </button>
-                            <button class="a-button a-button--third a-button--huge" id="upload-button">
+                            <input type="file" id="jsonFileInput"  style="display: none" />
+                            <span class="a-upload-field__description" data-filename ='' id="jsonFileSpan"></span>
+                            <button class="a-button a-button--third a-button--huge" type="button" id="upload-button">
                                 <div class="a-button__label" data-i18n="appInfoPage.upload">インポート</div>
                             </button>
                             <button class="a-button a-button--primary a-button--huge" id="deploy-button">
@@ -697,18 +702,36 @@
                 </div>
                 <!-- End of Cluster Info Area -->
             </section>
-            <div class="o-modal" id="modal-help3">
-                <div class="o-modal__window">
-                    <button class="o-modal__close-button" type="button"><i class="a-icon a-icon--close"></i></button>
-                    <main class="o-modal__body">
-                        <header class="o-modal__header undefined">
-                            <p>システム・アプリ名とは？</p>
-                        </header>
-                        <p class="a-text a-text--align-left">「システム・アプリ名」は.........</p>
-                    </main>
-                </div>
-            </div>
+<!--            <div class="o-modal" id="modal-help3">-->
+<!--                <div class="o-modal__window">-->
+<!--                    <button class="o-modal__close-button" type="button"><i class="a-icon a-icon&#45;&#45;close"></i></button>-->
+<!--                    <main class="o-modal__body">-->
+<!--                        <header class="o-modal__header undefined">-->
+<!--                            <p>システム・アプリ名とは？</p>-->
+<!--                        </header>-->
+<!--                        <p class="a-text a-text&#45;&#45;align-left">「システム・アプリ名」は.........</p>-->
+<!--                    </main>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
+    </div>
+</div>
+
+<div class="o-modal" id="custom-modal">
+    <div class="o-modal__window">
+        <button class="o-modal__close-button" type="button"><i class="a-icon a-icon--close"></i></button>
+        <main class="o-modal__body">
+            <header class="o-modal__header o-modal__header--has-icon">
+                <p class="modal-header-a"></p>
+            </header>
+            <p class="a-text a-text--align-left modal-content-a"></p>
+        </main>
+
+        <!--        <footer class="o-modal__footer">-->
+        <!--            <button class="a-button a-button&#45;&#45;third a-button&#45;&#45;large ">-->
+        <!--                <div class="a-button__label">はい</div>-->
+        <!--            </button>-->
+        <!--        </footer>-->
     </div>
 </div>
 
