Set modal title

--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -371,7 +371,7 @@
                                         <div class="m-form-field p-setting-input-form__form-field">
                                             <label class="m-form-field__label">
                                                 <label data-i18n="appInfoPage.podNum">起動POD数</label> &nbsp
-                                                <div class="a-help-button" name="podNumText"><i class="a-icon a-icon--help"></i></div>
+                                                <div class="a-help-button" name="appInfoPage.podNumText"><i class="a-icon a-icon--help"></i></div>
                                                 ：
                                                 <span class="m-form-field__label-addons">
                                                 <span class="a-tag" data-i18n="appInfoPage.required">必須</span>
@@ -725,7 +725,7 @@
     <div class="o-modal__window">
         <button class="o-modal__close-button" type="button"><i class="a-icon a-icon--close"></i></button>
         <main class="o-modal__body">
-            <header class="o-modal__header o-modal__header--has-icon">
+            <header class="o-modal__header o-modal__header--has-icon" style="padding-bottom: 0">
                 <p class="modal-header-a"></p>
             </header>
             <p class="a-text a-text--align-left modal-content-a"></p>
