Yaml download 作成する

--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -303,7 +303,7 @@
                             <button class="a-button a-button--secondary a-button--huge" id="save-button">
                                 <div class="a-button__label" data-i18n="appInfoPage.save">保存</div>
                             </button>
-                            <button class="a-button a-button--third a-button--huge" id="-button">
+                            <button class="a-button a-button--third a-button--huge" id="yaml-button">
                                 <div class="a-button__label" data-i18n="appInfoPage.download">ダウンロード</div>
                             </button>
                             <button class="a-button a-button--third a-button--huge" id="download-button">
