Optimize alert modal and cshtml template

--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -731,7 +731,19 @@
                 <p class="modal-header-a"></p>
             </header>
             <p class="a-text a-text--align-left modal-content-a"></p>
+
+            <footer class="o-modal__footer o-modal__footer--has-icon" style="padding-bottom: 0">
+                <div style="justify-content: flex-end; display: flex; width: 250px">
+                    <button  class="a-button a-button--primary " id="confirm-btn">
+                        <div class="a-button__label" data-i18n="appInfoPage.confirm">確定</div>
+                    </button>
+                    <button type="button" class="a-button a-button--third" id="cancel-btn">
+                        <div class="a-button__label" data-i18n="appInfoPage.cancel">取消</div>
+                    </button>
+                </div>
+            </footer>
         </main>
+
     </div>
 </div>
 
