--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -26,21 +26,17 @@
             integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
 
-    <!-- 小巧但功能强大的工具库，提供了大量的实用函数，包括数组操作、对象操作、函数式编程工具等。-->
-    <!--  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js" integrity="sha256-qXBd/EfAdjOA2FGrGAG+b3YBn2tn5A6bhz+LSgYD96k=" crossorigin="anonymous"></script>-->
-
     <!-- translation tool -->
     <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.10/i18next.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-i18next@1.2.1/jquery-i18next.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/i18next-browser-languagedetector@6.1.3/i18nextBrowserLanguageDetector.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.3.2/i18nextHttpBackend.min.js"></script>
-
     <!-- custom js -->
     <script src="assets/js/common/i18next/i18n.js"></script>
     <script src="assets/js/common/common.js"></script>
     <script src="assets/js/cd-control/cd-control-extra.js"></script>
     <script src="assets/js/cd-control/selectors.js"></script>
-    <script src="assets/js/cd-control/tableComponemt.js"></script>
+    <script src="assets/js/cd-control/tableComponent.js"></script>
     <title>ルグイン</title>
 </head>
 <body>
@@ -179,12 +175,23 @@
                                 </div>
                             </div>
                             <div class="m-form-field p-setting-input-form__form-field">
+                                <label class="m-form-field__label">
+                                    <label data-i18n="appInfoPage.upload"> Upload File</label>：
+                                    <span class="m-form-field__label-addons">
+                                        <span class="a-tag" data-i18n="appInfoPage.required">必須</span>
+                                    </span>
+                                </label>
                                 <div class="a-text-field a-text-field--type-text" style="max-width: 100px">
-                                    <input type="file" file-input="#configFile" style="display: none">
-                                    <span class="a-upload-field__description"  selected-file="#configMapField${i}-1"></span>
-                                    <button type="button" class="a-button a-button--primary" name="#configMapField${i}-1">
-                                        upload
-                                    </button>
+                                    <div class="m-form-field__content">
+                                        <div class="a-text-field a-text-field--type-text">
+                                            <button type="button" style="border-radius: 6px" class="a-button a-button--primary" id="uploadConfig">
+                                                <i class="bi bi-cloud-upload"></i> upload
+                                            </button>
+                                            <input type="file" file-input="k8sFile" id="uploadk8s" style="display: none">
+                                            <span class="a-upload-field__description" id="uploadk8sFile"></span>
+                                        </div>
+                                    </div>
+                                    
                                 </div>
                             </div>
                         </div>
