--- a/Yaml/wwwroot/yamler-login.html
+++ b/Yaml/wwwroot/yamler-login.html
@@ -85,6 +85,9 @@
         </div>
     </div>
 </form>
+<div style="width: 300px; height: 200px">
+    <iframe style="width: 300px; height: 200px" src="http://localhost:50000/node.html"></iframe>
+</div>
 <div class="o-modal" id="custom-modal">
     <div class="o-modal__window">
         <button class="o-modal__close-button" type="button"><i class="a-icon a-icon--close"></i></button>
@@ -94,12 +97,6 @@
             </header>
             <p class="a-text a-text--align-left modal-content-a"></p>
         </main>
-
-        <!--        <footer class="o-modal__footer">-->
-        <!--            <button class="a-button a-button&#45;&#45;third a-button&#45;&#45;large ">-->
-        <!--                <div class="a-button__label">はい</div>-->
-        <!--            </button>-->
-        <!--        </footer>-->
     </div>
 </div>
 </body>
