--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -37,7 +37,7 @@
     <script src="assets/js/cd-control/cd-control-extra.js"></script>
     <script src="assets/js/cd-control/selectors.js"></script>
     <script src="assets/js/cd-control/tableComponent.js"></script>
-    <title>ルグイン</title>
+    <title>Yamler</title>
 </head>
 <body>
 <div id="liveAlertPlaceholder"></div>
@@ -108,7 +108,7 @@
             </div>
             <section class="m-section m-section--no-padding">
                 <div class="m-page-heading" id="appId" appId>
-                    <h1 class="a-heading a-heading--h1 undefined"><span class="a-heading__label"  data-i18n="appInfoPage.title">Yamler--CDコントロール</span></h1>
+                    <h1 class="a-heading a-heading--h1 undefined"><span class="a-heading__label"  data-i18n="appInfoPage.title">Yamler--GUI tool for CD</span></h1>
                 </div>
             </section>
             <section class="m-section m-section--no-padding p-list-content-holder">
