--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -61,13 +61,13 @@
                         <div class="a-nav-item a-nav-item--labor-menu a-nav-item--selected">
                             <a href="cd-control.html" class="a-nav-item__link">
                                 <div class="a-nav-icon a-nav-icon--labor-menu a-nav-icon--active a-nav-item__icon"><i class="a-icon a-icon--labor-menu-selected"></i></div>
-                                <span class="a-nav-item__label" data-i18n="appInfoPage.controller">CDコントロール</span>
+                                <span class="a-nav-item__label" data-i18n="appInfoPage.controller">Yamler</span>
                             </a>
                         </div>
                         <div class="a-nav-item a-nav-item--labor-menu">
                             <a href="#" class="a-nav-item__link">
                                 <div class="a-nav-icon a-nav-icon--labor-menu a-nav-item__icon"><i class="a-icon a-icon--labor-menu"></i></div>
-                                <span class="a-nav-item__label" data-i18n="appInfoPage.clusterStorage">クラウドストア</span>
+                                <span class="a-nav-item__label" data-i18n="appInfoPage.clusterStorage">CloudStorage</span>
                             </a>
                         </div>
                         <div class="a-nav-item a-nav-item--labor-menu">
