download manual function

--- a/Yaml/wwwroot/manual.html
+++ b/Yaml/wwwroot/manual.html
@@ -68,7 +68,7 @@
                             </a>
                         </div>
                         <div class="a-nav-item a-nav-item--labor-menu">
-                            <a href="#" class="a-nav-item__link">
+                            <a href="manual.html" class="a-nav-item__link">
                                 <div class="a-nav-icon a-nav-icon--labor-menu a-nav-item__icon"><i class="a-icon a-icon--labor-menu"></i></div>
                                 <span class="a-nav-item__label" data-i18n="appInfoPage.manual">マニュアル</span>
                             </a>
