--- a/Yaml/wwwroot/manual.html
+++ b/Yaml/wwwroot/manual.html
@@ -64,7 +64,7 @@
                         <div class="a-nav-item a-nav-item--labor-menu">
                             <a href="#" class="a-nav-item__link">
                                 <div class="a-nav-icon a-nav-icon--labor-menu a-nav-item__icon"><i class="a-icon a-icon--labor-menu"></i></div>
-                                <span class="a-nav-item__label" data-i18n="appInfoPage.clusterStorage">CloudStorage</span>
+                                <span class="a-nav-item__label" data-i18n="appInfoPage.clusterStorage">CloudStore</span>
                             </a>
                         </div>
                         <div class="a-nav-item a-nav-item--labor-menu">
@@ -82,10 +82,10 @@
         </div>
         <div class="o-whole__body">
             <section class="m-section m-section--no-padding p-list-content-holder">
-                <div style="margin:0 10% 0 5%">
+                <div style="margin:0 10% 0 5%"> 
                     <section class="m-section m-section--fill-white">
                         <div class="o-global-navigation__logo">
-                            <h1 class="a-heading undefined"><span class="a-heading__label">Manual</span></h1>
+                            <h1 class="a-heading undefined"><span class="a-heading__label">マニュアル</span></h1>
                         </div><br />
                         <a class="a-modal-opener" id="download-link">・ダウンロードファイル1<i class="a-icon a-icon--link-new-window"></i></a>
                     </section>
