--- a/Yaml/wwwroot/cd-control.html
+++ b/Yaml/wwwroot/cd-control.html
@@ -67,7 +67,7 @@
                         <div class="a-nav-item a-nav-item--labor-menu">
                             <a href="#" class="a-nav-item__link">
                                 <div class="a-nav-icon a-nav-icon--labor-menu a-nav-item__icon"><i class="a-icon a-icon--labor-menu"></i></div>
-                                <span class="a-nav-item__label" data-i18n="appInfoPage.clusterStorage">CloudStorage</span>
+                                <span class="a-nav-item__label" data-i18n="appInfoPage.clusterStorage">クラウドストア</span>
                             </a>
                         </div>
                         <div class="a-nav-item a-nav-item--labor-menu">
